doc: add base, base input specification

--- a/app/corner-indicator/spec/page.mdx
+++ b/app/corner-indicator/spec/page.mdx
@@ -7,7 +7,7 @@ import * as Demo from '@public/demo/corner-indicator';
 {/* Component => Component Example */}
 
 :::callout[note]
-A component that organizes content into vertically stacked collapsible and expandable sections.
+A badge or dot indicator that appears in a corner of a container, used to signal status, count, or activity.
 :::
 
 ## Design checklist <span id="design-checklist"></span>
