--- a/app/date-picker/dev/page.mdx
+++ b/app/date-picker/dev/page.mdx
@@ -209,7 +209,7 @@ import CodePreview from '@components/showcase/CodePreview';
 | **errorMessage**      | string                                             |             | Error message                                |
 | **theme**             | string                                             | _'default'_ | Theme                                        |
 | **inputSize**         | 'sm' \| 'md'                                       | _'md'_      | Input size                                   |
-| **...InputProps**     | [See Input](../BaseInput)                          |             | Inherits all props from Input                |
+| **...InputProps**     | [See Input](../base-input/dev)                     |             | Inherits all props from Input                |
 | **...FlatpickrProps** | [See Flatpickr](https://flatpickr.js.org/options/) |             | Inherits all Flatpickr options               |
 
-> _Note:_ _DatePicker_ inherits all props from Input and Flatpickr. See [Input documentation](../BaseInput) and [Flatpickr options](https://flatpickr.js.org/options/) for full details.
+> _Note:_ _DatePicker_ inherits all props from Input and Flatpickr. See [Input documentation](../base-input/dev) and [Flatpickr options](https://flatpickr.js.org/options/) for full details.
