--- a/app/email-input/dev/page.mdx
+++ b/app/email-input/dev/page.mdx
@@ -97,12 +97,12 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<EmailInput />`
 
-| **Prop**           | **Type**                  | **Default** | **Description**                            |
-| ------------------ | ------------------------- | ----------- | ------------------------------------------ |
-| **type**           | string                    | _'email'_   | Input type (always 'email' for EmailInput) |
-| **domain**         | string \| string[]        |             | Domain or list of domains for suggestions  |
-| **onDomainChange** | function (domain)         |             | Callback when domain changes               |
-| **domainValue**    | string                    |             | Currently selected domain (controlled)     |
-| **...InputProps**  | [See Input](../BaseInput) |             | Inherits all props from Input              |
+| **Prop**           | **Type**                       | **Default** | **Description**                            |
+| ------------------ | ------------------------------ | ----------- | ------------------------------------------ |
+| **type**           | string                         | _'email'_   | Input type (always 'email' for EmailInput) |
+| **domain**         | string \| string[]             |             | Domain or list of domains for suggestions  |
+| **onDomainChange** | function (domain)              |             | Callback when domain changes               |
+| **domainValue**    | string                         |             | Currently selected domain (controlled)     |
+| **...InputProps**  | [See Input](../base-input/dev) |             | Inherits all props from Input              |
 
-> _Note:_ _EmailInput_ inherits all props from Input and the native input element. See [Input documentation](../BaseInput) for full details on available props and tokens.
+> _Note:_ _EmailInput_ inherits all props from Input and the native input element. See [Input documentation](../base-input/dev) for full details on available props and tokens.
