--- a/app/number-input/dev/page.mdx
+++ b/app/number-input/dev/page.mdx
@@ -193,8 +193,8 @@ import CodePreview from '@components/showcase/CodePreview';
 | **inputSize**     | 'sm' \| 'md'                      | _'sm'_      | Input size                                   |
 | **leftIcon**      | React.ReactNode                   |             | Left icon                                    |
 | **onClear**       | () => void                        |             | Callback when clear                          |
-| **...InputProps** | [See Input](../BaseInput)         |             | Inherits all props from Input                |
+| **...InputProps** | [See Input](../base-input/dev)    |             | Inherits all props from Input                |
 
-> _Note:_ _NumberInput_ inherits all props from Input and the native input element. See [Input documentation](../BaseInput) for full details on available props and tokens.
+> _Note:_ _NumberInput_ inherits all props from Input and the native input element. See [Input documentation](../base-input/dev) for full details on available props and tokens.
 
 ---
