--- a/app/search-input/dev/page.mdx
+++ b/app/search-input/dev/page.mdx
@@ -216,15 +216,15 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<SearchInput />`
 
-| **Prop**          | **Type**                  | **Default** | **Description**                              |
-| ----------------- | ------------------------- | ----------- | -------------------------------------------- |
-| **type**          | string                    | _'search'_  | Input type (always 'search' for SearchInput) |
-| **onSearch**      | function (value)          |             | Callback when search is triggered            |
-| **onChange**      | function (event)          |             | Callback when value changes                  |
-| **value**         | string                    |             | Controlled value                             |
-| **placeholder**   | string                    |             | Placeholder text                             |
-| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input**            |
+| **Prop**          | **Type**                       | **Default** | **Description**                              |
+| ----------------- | ------------------------------ | ----------- | -------------------------------------------- |
+| **type**          | string                         | _'search'_  | Input type (always 'search' for SearchInput) |
+| **onSearch**      | function (value)               |             | Callback when search is triggered            |
+| **onChange**      | function (event)               |             | Callback when value changes                  |
+| **value**         | string                         |             | Controlled value                             |
+| **placeholder**   | string                         |             | Placeholder text                             |
+| **...InputProps** | [See Input](../base-input/dev) |             | Inherits all props from **Input**            |
 
-> **_Note:_** _SearchInput_ **inherits** all props from **Input** and the native **input** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
+> **_Note:_** _SearchInput_ **inherits** all props from **Input** and the native **input** element. See [Input documentation](../base-input/dev) for full details on available props and tokens.
 
 ---
