--- a/app/select/dev/page.mdx
+++ b/app/select/dev/page.mdx
@@ -57,21 +57,21 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<Select />`
 
-| **Prop**          | **Type**                  | **Default** | **Description**                                                        |
-| ----------------- | ------------------------- | ----------- | ---------------------------------------------------------------------- |
-| **options**       | array                     |             | List of options                                                        |
-| **value**         | string \| number \| array |             | Selected value(s)                                                      |
-| **onChange**      | function (value)          |             | Callback when value changes                                            |
-| **multiselect**   | boolean                   | _false_     | Allow multiple selection (named `multiselect` in code, not `multiple`) |
-| **disabled**      | boolean                   | _false_     | Disable the select                                                     |
-| **placeholder**   | string                    |             | Placeholder text                                                       |
-| **clearButton**   | boolean                   | _false_     | Show clear button                                                      |
-| **filterable**    | boolean                   | _false_     | Allow filtering options                                                |
-| **tagProps**      | object                    |             | Tag props for multi-select (see Tag spec)                              |
-| **theme**         | string                    | _'default'_ | Visual theme ('default' or 'alternative')                              |
-| **selectSize**    | string                    | _'md'_      | Size of select ('sm', 'md')                                            |
-| **floatingLabel** | string \| ReactNode       |             | Floating label                                                         |
-| **leftIcon**      | ReactNode                 |             | Icon on the left                                                       |
-| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input**                                      |
-| **...MenuProps**  | [See Menu](../menu)       |             | Inherits all props from **Menu**                                       |
-| **...TagProps**   | [See Tag](../tag)         |             | Inherits all props from **Tag**                                        |
+| **Prop**          | **Type**                       | **Default** | **Description**                                                        |
+| ----------------- | ------------------------------ | ----------- | ---------------------------------------------------------------------- |
+| **options**       | array                          |             | List of options                                                        |
+| **value**         | string \| number \| array      |             | Selected value(s)                                                      |
+| **onChange**      | function (value)               |             | Callback when value changes                                            |
+| **multiselect**   | boolean                        | _false_     | Allow multiple selection (named `multiselect` in code, not `multiple`) |
+| **disabled**      | boolean                        | _false_     | Disable the select                                                     |
+| **placeholder**   | string                         |             | Placeholder text                                                       |
+| **clearButton**   | boolean                        | _false_     | Show clear button                                                      |
+| **filterable**    | boolean                        | _false_     | Allow filtering options                                                |
+| **tagProps**      | object                         |             | Tag props for multi-select (see Tag spec)                              |
+| **theme**         | string                         | _'default'_ | Visual theme ('default' or 'alternative')                              |
+| **selectSize**    | string                         | _'md'_      | Size of select ('sm', 'md')                                            |
+| **floatingLabel** | string \| ReactNode            |             | Floating label                                                         |
+| **leftIcon**      | ReactNode                      |             | Icon on the left                                                       |
+| **...InputProps** | [See Input](../base-input/dev) |             | Inherits all props from **Input**                                      |
+| **...MenuProps**  | [See Menu](../menu)            |             | Inherits all props from **Menu**                                       |
+| **...TagProps**   | [See Tag](../tag)              |             | Inherits all props from **Tag**                                        |
