--- a/app/text-input/dev/page.mdx
+++ b/app/text-input/dev/page.mdx
@@ -196,13 +196,13 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<TextInput />`
 
-| **Prop**          | **Type**                  | **Default** | **Description**                          |
-| ----------------- | ------------------------- | ----------- | ---------------------------------------- |
-| **type**          | string                    | _'text'_    | Input type (always 'text' for TextInput) |
-| **onChange**      | function (event)          |             | Callback when value changes              |
-| **value**         | string                    |             | Controlled value                         |
-| **placeholder**   | string                    |             | Placeholder text                         |
-| **rows**          | number                    |             | Number of visible text lines             |
-| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input**        |
+| **Prop**          | **Type**                       | **Default** | **Description**                          |
+| ----------------- | ------------------------------ | ----------- | ---------------------------------------- |
+| **type**          | string                         | _'text'_    | Input type (always 'text' for TextInput) |
+| **onChange**      | function (event)               |             | Callback when value changes              |
+| **value**         | string                         |             | Controlled value                         |
+| **placeholder**   | string                         |             | Placeholder text                         |
+| **rows**          | number                         |             | Number of visible text lines             |
+| **...InputProps** | [See Input](../base-input/dev) |             | Inherits all props from **Input**        |
 
-> _Note: TextInput inherits all props from **Input** and the native **input** element. See [Input documentation](../BaseInput) for full details on available props and tokens._
+> _Note: TextInput inherits all props from **Input** and the native **input** element. See [Input documentation](../base-input/dev) for full details on available props and tokens._
