--- a/app/textarea/dev/page.mdx
+++ b/app/textarea/dev/page.mdx
@@ -88,12 +88,12 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<Textarea />`
 
-| **Prop**          | **Type**                  | **Default** | **Description**                   |
-| ----------------- | ------------------------- | ----------- | --------------------------------- |
-| **onChange**      | function (event)          |             | Callback when value changes       |
-| **value**         | string                    |             | Controlled value                  |
-| **placeholder**   | string                    |             | Placeholder text                  |
-| **rows**          | number                    |             | Number of visible text lines      |
-| **...InputProps** | [See Input](../BaseInput) |             | Inherits all props from **Input** |
+| **Prop**          | **Type**                       | **Default** | **Description**                   |
+| ----------------- | ------------------------------ | ----------- | --------------------------------- |
+| **onChange**      | function (event)               |             | Callback when value changes       |
+| **value**         | string                         |             | Controlled value                  |
+| **placeholder**   | string                         |             | Placeholder text                  |
+| **rows**          | number                         |             | Number of visible text lines      |
+| **...InputProps** | [See Input](../base-input/dev) |             | Inherits all props from **Input** |
 
-> _Note: Textarea inherits all props from **Input** and the native **textarea** element. See [Input documentation](../BaseInput) for full details on available props and tokens._
+> _Note: Textarea inherits all props from **Input** and the native **textarea** element. See [Input documentation](../base-input/dev) for full details on available props and tokens._
