--- a/app/radio/dev/page.mdx
+++ b/app/radio/dev/page.mdx
@@ -51,18 +51,18 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<Radio />`
 
-| **Prop**              | **Type**                  | **Default** | **Description**                   |
-| --------------------- | ------------------------- | ----------- | --------------------------------- |
-| **checked**           | boolean                   |             | Checked state                     |
-| **onChange**          | function (event)          |             | Callback when value changes       |
-| **value**             | string \| number          |             | Value of the radio                |
-| **label**             | string \| ReactNode       |             | Label for the radio               |
-| **sublabel**          | string \| ReactNode       |             | Sublabel for the radio            |
-| **disabled**          | boolean                   | _false_     | Disable the radio                 |
-| **color**             | string                    |             | Radio color                       |
-| **radioWrapperProps** | any                       |             | Props for the radio wrapper       |
-| **...InputProps**     | [See Input](../BaseInput) |             | Inherits all props from **Input** |
+| **Prop**              | **Type**                       | **Default** | **Description**                   |
+| --------------------- | ------------------------------ | ----------- | --------------------------------- |
+| **checked**           | boolean                        |             | Checked state                     |
+| **onChange**          | function (event)               |             | Callback when value changes       |
+| **value**             | string \| number               |             | Value of the radio                |
+| **label**             | string \| ReactNode            |             | Label for the radio               |
+| **sublabel**          | string \| ReactNode            |             | Sublabel for the radio            |
+| **disabled**          | boolean                        | _false_     | Disable the radio                 |
+| **color**             | string                         |             | Radio color                       |
+| **radioWrapperProps** | any                            |             | Props for the radio wrapper       |
+| **...InputProps**     | [See Input](../base-input/dev) |             | Inherits all props from **Input** |
 
-> **_Note:_** _Radio_ **inherits** all props from **Input** and the native **input[type=radio]** element. See [Input documentation](../BaseInput) for full details on available props and tokens.
+> **_Note:_** _Radio_ **inherits** all props from **Input** and the native **input[type=radio]** element. See [Input documentation](../base-input/dev) for full details on available props and tokens.
 
 ---
