doc: fix reference links

--- a/app/breadcrumb/dev/page.mdx
+++ b/app/breadcrumb/dev/page.mdx
@@ -69,10 +69,10 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ### `<BreadcrumbItem />`
 
-| **Prop**               | **Type**                         | **Default** | **Description**                                                                   |
-| ---------------------- | -------------------------------- | ----------- | --------------------------------------------------------------------------------- |
-| **isMenuItem**         | boolean                          | _false_     | Render as a menu item (for overflow).                                             |
-| **...InlineLinkProps** | [See InlineLink](../inline-link) |             | All props from **InlineLink** (size, color, disabled, underline, iconOnly, etc.). |
+| **Prop**               | **Type**                             | **Default** | **Description**                                                                   |
+| ---------------------- | ------------------------------------ | ----------- | --------------------------------------------------------------------------------- |
+| **isMenuItem**         | boolean                              | _false_     | Render as a menu item (for overflow).                                             |
+| **...InlineLinkProps** | [See InlineLink](../inline-link/dev) |             | All props from **InlineLink** (size, color, disabled, underline, iconOnly, etc.). |
 
 ---
 
@@ -84,6 +84,6 @@ import CodePreview from '@components/showcase/CodePreview';
 | **menuProps**      | Omit&lt;MenuProps, 'children'&gt; |             | Props for the menu (see Menu component).                 |
 | **...buttonProps** | HTMLButtonElement props           |             | All native button props (**className**, **style**, etc.) |
 
-> **Note:** _BreadcrumbItem_ **extends** all props from [**InlineLink**](../inline-link). _Breadcrumb_ and _BreadcrumbMenu_ extend all native props from their respective HTML elements.
+> **Note:** _BreadcrumbItem_ **extends** all props from [**InlineLink**](../inline-link/dev). _Breadcrumb_ and _BreadcrumbMenu_ extend all native props from their respective HTML elements.
 
 ---
