--- a/app/chip/dev/page.mdx
+++ b/app/chip/dev/page.mdx
@@ -59,7 +59,7 @@ import CodePreview from '@components/showcase/CodePreview';
 | **disabled**       | boolean                                   | _false_      | Disable the chip                              |
 | **onChange**       | function (args: value, checked?, active?) |              | Callback when state changes                   |
 | **onRemove**       | function (value)                          |              | Callback when remove is clicked (button chip) |
-| **...BaseProps**   | [See Base](../base)                       |              | Inherits all layout props from Base           |
+| **...BaseProps**   | [See Base](../base/dev)                   |              | Inherits all layout props from Base           |
 | **...spanProps**   | HTMLSpanElement props                     |              | All native span props (className, style, ...) |
 
 > **_Note:_** _Chip_ **inherits** all props from **Base** and **HTMLSpanElement**.
