--- a/app/select/dev/page.mdx
+++ b/app/select/dev/page.mdx
@@ -73,5 +73,5 @@ import CodePreview from '@components/showcase/CodePreview';
 | **floatingLabel** | string \| ReactNode            |             | Floating label                                                         |
 | **leftIcon**      | ReactNode                      |             | Icon on the left                                                       |
 | **...InputProps** | [See Input](../base-input/dev) |             | Inherits all props from **Input**                                      |
-| **...MenuProps**  | [See Menu](../menu)            |             | Inherits all props from **Menu**                                       |
-| **...TagProps**   | [See Tag](../tag)              |             | Inherits all props from **Tag**                                        |
+| **...MenuProps**  | [See Menu](../menu/dev)        |             | Inherits all props from **Menu**                                       |
+| **...TagProps**   | [See Tag](../tag/dev)          |             | Inherits all props from **Tag**                                        |
